--- a/views/form.erb
+++ b/views/form.erb
@@ -1,8 +1,10 @@
    <h1>Welcome to the <strong>Mini-Museum-Meandering-Machine!</strong>
    </h1>
-   <br>
-   <br>
+   
 <body>
+    <span>
+        <div class='transbox'>
+            
      <form method="post" action='/'>  
      <label>Please type in your name to start:</label>
         <br>
@@ -18,32 +20,31 @@
             <br>
             <br>
 
-            <p>
+            
             Right, all you need to do now is answer these simple questions
-            </p>
+            
             <br>
 
       <label>What type of mood are you in today?</label>
             <label class="radio">
                 <input type="radio" name="mood" value="stressed">
-                Stressed?
+                Stressed
             </label>
             
             <label class="radio">
                 <input type="radio" name="mood" value="contemplative">
-                Contemplative?
+                Contemplative
             </label>
             
             <label class="radio">
                 <input type="radio" name="mood" value="inspired">
-                Inspired?
+                Inspired
             </label>
             <label class="radio">
                 <input type="radio" name="mood" value="bored">
-                Bored?
+                Bored
             </label>
             
-            <br>
             <br>
 
             <label>What is your favourite out of the following:</label>
@@ -71,5 +72,11 @@
             <button type='submit' class='btn btn-success'>Submit</button>
           </p>
           </form>
+      </div>
+          </span>
+          <br>
+          <br>
+          <br>
+          <navbar>
 </body>
    
