--- a/views/result.erb
+++ b/views/result.erb
@@ -133,7 +133,9 @@ If so, please enter your email into the box
 <br>
             <br>
             <form method='post' action='/result'>
-            <input type='text' name='vemail'>
+            <input type='text' name='email'>
 <span>
+    <br>
+    <br>
 The Mini-meandering-maching hopes to have helped you on your day, and that you enjoy your visit to London, so very different from <%= @place %>
 </span>
