--- a/views/form.erb
+++ b/views/form.erb
@@ -1,4 +1,4 @@
-   <h1>Welcome to the <strong>Mini-Museum-Meandering-Machine!</strong>
+   <h1>Welcome to the <strong>Mini-Museum-Meandering-Machine!</strong>flim flam
    </h1>
    
 <body>
